It's the most horrible image format I've ever seen, and I've seen a lot.

Increased -aa default value for all renderers (and also -ad and -as in
rview) at Schorsch's suggestion.  I think this undid my earlier decrease
of -aa last time, which I guess was ill-considered.

Modified oconv to keep subdividing the octree if there are too many
objects in a voxel even when the -r resolution limit has been
reached.  This was not done before due to problems with recursion,
and still, it will only continue to 256 times the original -r limit.
If that isn't enough, then there's probably no hope, anyway.

Added -l option to obj2mesh to search for material files in library
locations.

Increased polygon vertex limit to 512 in obj2mesh and obj2rad and added
warning if this limit is exceeded.

Added tone-mapping and monitor primary options to ra_bmp.  This gives
new functionality similar to normtiff and ximage.  It would be nice to
add this feature to the other ra_* programs as well...  someday.

Fixed long-standing bug in reported pixel ordering out of certain
protate commands.

Added -p option to rcalc for "passive mode" that transmits
unrecognized input -- useful for substituting data in the
middle of a stream.

Fixed a very obscure bug in rpict that caused a dark horizontal
line in certain cylindrical projections due to improper drawing
of the sky dome source in rt/srcdraw.c.

Fixed problems with effective ray lenths computed for dielectric
and BRTDfunc materials.  This was most evident in breakup of holodeck
views when VDISTANCE=True.

Fixed rad so that 'scene' variable may consist only of inline commands.

Fixed bug introduced in shadow caching routines where sources in the
middle of spheres were not illuminating properly.  Thanks to Guilio
Antonutto for spotting this problem.

Modified gensky behavior so if time is given with standard time zone
designation, any -m option is ignored.

Added -n option to mkillum for (shared memory) parallel processing.