@@ -1310,3 +1310,7 @@ Modified gensky behavior so if time is given with standard time zone
 designation, any -m option is ignored.
 
 Added -n option to mkillum for (shared memory) parallel processing.
+
+Fixed long-standing bug in parallel processing code that only seemed
+to manifest with the new mkillum -n option, where rtrace would
+deadlock upon termination.
